--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "forex-volatility-monitor",
   "version": "1.0.0",
+  "homepage": "./", // Critical for asset paths
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build" // Optional
   },
   "dependencies": {
     "react": "^18.2.0",
