--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "forex-volatility-monitor",
   "version": "1.0.0",
-  "homepage": "./", // Critical for asset paths
+  "homepage": "./",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "predeploy": "npm run build" // Optional
+    "predeploy": "npm run build"
   },
   "dependencies": {
     "react": "^18.2.0",
